[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "utils"
path = "src/lib/utils/mod.rs"

[dependencies]
num-integer = "^0.1"
transpose = "^0.2"
pathfinding = "4.8.0"

[profile.release]
panic = "abort"
opt-level = "s"
strip = "symbols"
lto = "thin"

